--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,11 @@
         </dependency>
 
         <dependency>
-            <groupId>com.zenjava</groupId>
-            <artifactId>javafx-maven-plugin</artifactId>
-            <version>8.8.3</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
         </dependency>
+
 
     </dependencies>
 
